force-app/main/default/objects/Position_Member__c/Position_Member__c.object-meta.xml
<CustomObject>
    <label>岗位成员</label>
    <nameField>
        <displayFormat>PM-{00000000}</displayFormat>
        <label>岗位成员编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>岗位成员</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>