force-app/main/default/objects/Position_Member__c/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <formula>Position__r.GroupId__c</formula>
    <label>GroupID</label>
    <type>Text</type>
</CustomField>