force-app/main/default/objects/Position_Member__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>岗位</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>岗位成员</relationshipLabel>
    <relationshipName>Position</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>