force-app/main/default/objects/Position_Member__c/fields/Position_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Position_Member_ID__c</fullName>
    <externalId>true</externalId>
    <label>岗位成员ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>