force-app/main/default/objects/Position_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>用户</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>