force-app/main/default/objects/Position_Member__c/validationRules/POSITION_MEMBER_USER_NOT_MODIFY.validationRule-meta.xml
<ValidationRule>
    <fullName>POSITION_MEMBER_USER_NOT_MODIFY</fullName>
    <active>true</active>
    <description>岗位人员不可修改,请删除后重新创建</description>
    <errorConditionFormula>AND(NOT($Setup.GlobalSetting__c.IgnoreValidation__c ),ISCHANGED(User__c))</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>岗位人员不可修改,请删除后重新创建</errorMessage>
</ValidationRule>